mule-user-guide/v/3.4/pop3-transport-reference.adoc
=  POP3传输参考

POP3传输可用于接收来自POP3收件箱的邮件。 POP3S传输端口使用`javax.mail` API连接到POP3邮箱。

[IMPORTANT]
====
*Warning*

如果Geronimo邮件位于CLASSSPATH中，POP3轮询可能会失败。有关此问题的信息，请咨询 http://www.mulesoft.org/jira/browse/MULE-4875[MULE-4875]。
====

TLS / SSL连接代表实体进行，实体可以是匿名的或由证书标识。密钥库提供识别建立连接的实体所需的证书和相关私钥。此外，连接到可信系统。受信任系统的公共证书存储在信任库中，该信任库用于验证与远程系统建立的连接是否与期望的身份匹配。

== 传输信息

[%header%autowidth.spread]
|===
|运输 |文档 |入站 |外向 |要求 |交易 |流 |重试{{ 8}} MEP  |默认MEP  | Maven工件
| POP3  |   | image:check.png[查]  | image:error.png[错误]  | image:check.png[查]  | {{3} }  | image:error.png[错误]  | image:error.png[错误]  |单向 |单向 | org.mule.transport：mule-运输POP3
| POP3S  |   | image:check.png[查]  | image:error.png[错误]  | image:check.png[查]  | {{3} }  | image:error.png[错误]  | image:error.png[错误]  |单向 |单向 | org.mule.transport：mule-运输POP3S
|===

[TIP]
====
*Legend*

*Transport*  - 运输的名称/协议
*Docs*  - 指向传输的JavaDoc和SchemaDoc的链接
*Inbound*  - 传输是否可以接收入站事件并可用于入站端点
*Outbound*  - 传输是否可以生成出站事件并与出站端点一起使用
*Request*  - 该端点是否可以通过请求调用直接查询（通过MuleClient或EventContext）
*Transactions*  - 交易是否受交通工具支持。支持事务的传输可以在本地或分布式两阶段提交（XA）事务中进行配置。
*Streaming*  - 此传输是否可以处理输入流中传入的消息。这可以非常有效地处理大数据。有关更多信息，请参阅流式传输。
*Retry*  - 此传输是否支持重试策略。请注意，所有传输都可以配置Retry策略，但只有这里标记的传输才是MuleSoft官方支持的
*MEPs*  - 此传输支持的消息交换模式
*Default MEP*  - 使用此传输的端点的默认MEP，它不显式配置MEP
*Maven Artifact*  - 组名称为 http://maven.apache.org/[Maven的]中此传输的工件名称
====

== 命名空间和语法

XML名称空间：

[source, xml, linenums]
----
xmlns:pop3 "http://www.mulesoft.org/schema/mule/pop3"
xmlns:pop3s "http://www.mulesoft.org/schema/mule/pop3s"
----

XML架构位置：

[source, code, linenums]
----
http://www.mulesoft.org/schema/mule/pop3 http://www.mulesoft.org/schema/mule/pop3/current/mule-pop3.xsd
http://www.mulesoft.org/schema/mule/pop3s http://www.mulesoft.org/schema/mule/pop3s/current/mule-pop3s.xsd
----

连接器语法：

[source, xml, linenums]
----
<pop3:connector name="pop3Connector" backupEnabled="true" backupFolder="backup" checkFrequency="90000"
                deleteReadMessages="false" mailboxFolder="INBOX" moveToFolder="PROCESSED"/>
<pop3s:connector name="pop3sConnector" backupEnabled="true" backupFolder="backup" checkFrequency="90000"
                 deleteReadMessages="false" mailboxFolder="INBOX" moveToFolder="PROCESSED"/>
  <pop3s:tls-client path="clientKeystore" storePassword="mulepassword" />
  <pop3s:tls-trust-store path="greenmail-truststore" storePassword="password" />
</pop3s:connector>
----

端点语法：

你可以用两种不同的方式定义你的端点：

. 前缀端点：
+
[source, xml, linenums]
----
<pop3:inbound-endpoint user="bob" password="password" host="localhost" port="65433"/>
<pop3s:inbound-endpoint user="bob" password="password" host="localhost" port="65433"/>
----

. 没有前缀的URI：
+
[source, xml, linenums]
----
<inbound-endpoint address="pop3://bob:password@localhost:65433"/>
<inbound-endpoint address="pop3s://bob:password@localhost:65433"/>
----


有关更多信息，请参阅下面的部分。

== 特点

* 简单配置入站端点的电子邮件访问：包括验证信息和检查频率
* 自动处理电子邮件附件
* 将邮件自动备份到指定的文件夹
* 自动删除已读消息
* 轻松配置安全性

== 用法

如果您想在您的配置中包含POP3电子邮件传输，这些是您需要定义的命名空间：

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xmlns:spring="http://www.springframework.org/schema/beans"
       xmlns:pop3="http://www.mulesoft.org/schema/mule/pop3"
       xsi:schemaLocation="
       http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
       http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/3.4/mule.xsd
       http://www.mulesoft.org/schema/mule/pop3 http://www.mulesoft.org/schema/mule/pop3/3.4/mule-pop3.xsd">
...
----

对于安全版本，您可以使用以下内容：

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xmlns:spring="http://www.springframework.org/schema/beans"
       xmlns:pop3s="http://www.mulesoft.org/schema/mule/pop3s"
       xsi:schemaLocation="
       http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
       http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/3.4/mule.xsd
       http://www.mulesoft.org/schema/mule/pop3s http://www.mulesoft.org/schema/mule/pop3s/3.4/mule-pop3s.xsd">
----

然后您需要按照以下所述配置连接器和端点。

=== 配置示例

假设你有一个企业，并想通过电子邮件附件接受订单。收到电子邮件后，您需要保存订单附件，以便在您的订单履行流程中收到附件。这是基于流的版本：

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xmlns:spring="http://www.springframework.org/schema/beans"
       xmlns:pop3="http://www.mulesoft.org/schema/mule/pop3"
       xmlns:vm="http://www.mulesoft.org/schema/mule/vm"
       xmlns:file="http://www.mulesoft.org/schema/mule/file"
       xmlns:email="http://www.mulesoft.org/schema/mule/email"
       xsi:schemaLocation="
       http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
       http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/3.4/mule.xsd
       http://www.mulesoft.org/schema/mule/file http://www.mulesoft.org/schema/mule/file/3.4/mule-file.xsd
       http://www.mulesoft.org/schema/mule/pop3 http://www.mulesoft.org/schema/mule/pop3/3.4/mule-pop3.xsd
       http://www.mulesoft.org/schema/mule/email http://www.mulesoft.org/schema/mule/email/3.4/mule-email.xsd
       http://www.mulesoft.org/schema/mule/vm http://www.mulesoft.org/schema/mule/vm/3.4/mule-vm.xsd">
 
    <pop3:connector name="pop3Connector"  />
 
    <expression-transformer name="returnAttachments">
        <return-argument evaluator="attachments-list" expression="*" optional="false"/>  ❶
    </expression-transformer>
 
    <file:connector name="fileName">
        <file:expression-filename-parser/>
    </file:connector>
     
    <flow name="incoming-orders">
        <pop3:inbound-endpoint user="bob" password="password" host="mailServer"
                               port="110" transformer-refs="returnAttachments"/> ❷
        <collection-splitter/> ❸
        <file:outbound-endpoint path="./received" outputPattern="#[function:datestamp].dat"> ❹
            <expression-transformer>
                <return-argument expression="payload.inputStream" evaluator="groovy" /> ❺
            </expression-transformer>
        </file:outbound-endpoint>                   
    </flow>
</mule>
----

内置变压器在declared声明并获取电子邮件附件列表。然后将这个转换器应用于在defined定义的pop3入站端点。然后我们在define上定义一个list list-message-splitter-router，它将遍历所有的电子邮件附件。接下来我们定义一个文件出站端点，它会将附件写入'./received'目录，并在文件名上加上datestamp。 ❺定义一个简单的groovy表达式，它获取附件的inputStream来写入文件。

这里是安全版本：

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xmlns:spring="http://www.springframework.org/schema/beans"
       xmlns:pop3="http://www.mulesoft.org/schema/mule/pop3"
       xmlns:vm="http://www.mulesoft.org/schema/mule/vm"
       xmlns:file="http://www.mulesoft.org/schema/mule/file"
       xmlns:email="http://www.mulesoft.org/schema/mule/email"
       xsi:schemaLocation="
       http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
       http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/3.4/mule.xsd
       http://www.mulesoft.org/schema/mule/file http://www.mulesoft.org/schema/mule/file/3.4/mule-file.xsd
       http://www.mulesoft.org/schema/mule/pop3 http://www.mulesoft.org/schema/mule/pop3/3.4/mule-pop3.xsd
       http://www.mulesoft.org/schema/mule/email http://www.mulesoft.org/schema/mule/email/3.4/mule-email.xsd
       http://www.mulesoft.org/schema/mule/vm http://www.mulesoft.org/schema/mule/vm/3.4/mule-vm.xsd">
 
    <pop3:connector name="pop3Connector"  />
 
<pop3s:connector name="POP3" validateConnections="true" doc:name="POP3">
        <pop3s:tls-client path="clientKeystore" storePassword="mulepassword"/>
        <pop3s:tls-trust-store path="greenmail-truststore" storePassword="password"/>
    </pop3s:connector>
 
    <expression-transformer name="returnAttachments">
        <return-argument evaluator="attachments-list" expression="*" optional="false"/>  ❶
    </expression-transformer>
 
    <file:connector name="fileName">
        <file:expression-filename-parser/>
    </file:connector>
     
    <flow name="incoming-orders">
        <pop3:inbound-endpoint user="bob" password="password" host="mailServer"
                               port="110" transformer-refs="returnAttachments"
                               connector-ref="POP3"/> ❷
        <collection-splitter/> ❸
        <file:outbound-endpoint path="./received" outputPattern="#[function:datestamp].dat"> ❹
            <expression-transformer>
                <return-argument expression="payload.inputStream" evaluator="groovy" /> ❺
            </expression-transformer>
        </file:outbound-endpoint>                   
    </flow>
</mule>
----

pop3s连接器具有tls上定义的客户端和服务器密钥库信息。内置变压器在declared声明并获取电子邮件附件列表。然后将此变压器应用于❸上的入站端点。然后我们在define上定义一个list list-message-splitter-router，它将遍历所有的电子邮件附件。接下来我们定义一个文件出站端点，它会将附件写入'./received'目录，并在文件名上加上datestamp。 ❻定义一个简单的groovy表达式，它获取附件的inputStream来写入文件。

== 配置参考

=== 连接器

POP3连接器支持所有 link:/mule-user-guide/v/3.4/configuring-a-transport[常见的连接器属性和属性]和以下附加属性：

[%header%autowidth.spread]
|===
| {属性{1}}说明 |缺省 |必
| backupEnabled  |是否将副本保存到备份文件夹 | False  |否
| backupFolder  |消息在读取后移动的文件夹。 |   |否
| checkFrequency  |到服务器的轮询连接之间的周期（ms）。 | 60000  |是
| mailboxFolder  |用于检查电子邮件的远程文件夹。 | INBOX  |否
| deleteReadMessages  |是否在服务器下载完成后从服务器中删除消息。如果设置为false，则将消息设置为defaultProcessMessageAction属性值。 | true  |否
| moveToFolder  |远程文件夹将邮件移动到已读取的位置。建议在使用此选项时将'deleteReadMessages'设置为false。 +
 当使用诸如GMail之类的公共电子邮件服务时，这非常有用，因为标记邮件的删除操作不起作用。相反，请设置@ moveToFolder = GMail / Trash。 |   |否
| defaultProcessMessageAction  |如果deleteReadMessages属性设置为false，则执行该操作。有效值包括：答案，删除，草稿，标记，最近，看到，用户和无 | SEEN  |否
|===

对于安全版本，还需要以下元素：

[%header%autowidth.spread]
|===
|元素 |说明
| tls-client a |使用以下属性配置客户端密钥存储区：

* 路径：包含公共证书和私钥用于识别的密钥库的位置（将相对于当前类路径和文件系统进行解析，如果可能的话）
*  storePassword：用于保护密钥库的密码
*  class：使用的密钥库类型

| tls-trust-store a |配置信任存储。属性是：

* 路径：包含可信服务器公用证书的信任存储的位置（将相对于当前类路径和文件系统进行解析，如果可能的话）
*  storePassword：用于保护信任存储的密码
|===

例如：

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xmlns:spring="http://www.springframework.org/schema/beans"
       xmlns:pop3="http://www.mulesoft.org/schema/mule/pop3"
       xsi:schemaLocation="
       http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
       http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
       http://www.mulesoft.org/schema/mule/pop3 http://www.mulesoft.org/schema/mule/pop3/current/mule-pop3.xsd">
 
     <pop3:connector name="pop3Connector" backupEnabled="true" backupFolder="newBackup" checkFrequency="1234"
                     mailboxFolder="newMailbox" deleteReadMessages="false"/>
...
----

安全版本：

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xmlns:spring="http://www.springframework.org/schema/beans"
       xmlns:pop3s="http://www.mulesoft.org/schema/mule/pop3s"
       xsi:schemaLocation="
       http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
       http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
       http://www.mulesoft.org/schema/mule/pop3s http://www.mulesoft.org/schema/mule/pop3s/current/mule-pop3s.xsd">
 
<pop3s:connector name="pop3sConnector">
  <pop3s:tls-client path="clientKeystore" storePassword="mulepassword" />
  <pop3s:tls-trust-store path="greenmail-truststore" storePassword="password" />
</pop3s:connector>
<flow name="relay">
      <pop3s:inbound-endpoint user="bob" password="password" host="mailServer"/> ❷
...
----

== 端点

POP3和POP3S端点包含有关连接到POP3邮箱的详细信息。您 link:/mule-user-guide/v/3.4/configuring-endpoints[配置端点]与其他运输方式一样，具有以下附加属性：

* 用户：邮箱所有者的用户名
* 密码：用户的密码
* 主机：POP3服务器的IP地址，例如 http://www.mulesoft.com[www.mulesoft.com]，localhost或127.0.0.1
* 端口：POP3服务器的端口号。如果未为POP3S连接器设置，则默认端口为995。

例如：

[source, xml, linenums]
----
<pop3:inbound-endpoint user="bob" password="foo" host="pop.gmail.com" checkFrequency="3000" />
----

或者如果使用POP3S连接器：

[source, xml, linenums]
----
<pop3s:inbound-endpoint user="bob" password="foo" host="pop.gmail.com" checkFrequency="3000" />
----

您还可以使用URI语法定义端点：

[source, xml, linenums]
----
<pop3s:inbound-endpoint address="pop3://bob:foo@pop.gmail.com" checkFrequency="3000" />
----

这将使用密码{{}}（使用POP3S端点的默认端口995）登录`pop.gmail.com`中的`bob`邮箱。

有关变形金刚的更多信息，请参阅电子邮件传输参考中的 link:/mule-user-guide/v/3.4/email-transport-reference[变形金刚]部分。

有关过滤器的更多信息，请参阅电子邮件传输参考中的 link:/mule-user-guide/v/3.4/email-transport-reference[过滤器]部分。

== 交换模式/传输特性

见 link:/mule-user-guide/v/3.4/transports-reference[传输矩阵]。

== 架构参考

您可以查看POP3电子邮件传输 http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_pop3/namespace-overview.html[这里]的完整模式。安全版本是 http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_pop3s/namespace-overview.html[这里]。

==  Java API参考

http://www.mulesoft.org/docs/site/current/apidocs/org/mule/transport/email/package-summary.html[Javadoc为POP3运输]

==  Maven模块

电子邮件传输由mule-transport-email模块执行。您可以在传输/电子邮件中找到电子邮件传输的来源。

如果您使用maven构建您的应用程序，请使用以下依赖项片段将电子邮件传输包含在您的项目中：

[source, xml, linenums]
----
<dependency>
  <groupId>org.mule.transports</groupId>
  <artifactId>mule-transport-email</artifactId>
</dependency>
----

== 限制

有关这些限制的更多信息，请参阅电子邮件传输参考中的 link:/mule-user-guide/v/3.4/email-transport-reference[限制]部分。
